<resources>
    <string name="app_name">Trivia Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="game_name">Welcome to Trivia Time</string>

    <string name="gm_option_ask">Please choose one of the following game-modes:</string>

    <string name="to_be_millionaire">Who wants to be a Millionaire?</string>

    <string name="rand_mode">Random</string>

    <string name="more_info">More Information</string>

    <string name="gm_info">Game-Mode Information</string>

    <string name="go_back">Go Back</string>

    <string name="millionaire_info">This is a game-show based on answering 5 consecutive questions correctly. If a player gets a question wrong at any time, then the game is over. If a player is able to answer 5 consecutive questions, then they make it to the top!</string>

    <string name="response">Please choose one of the following:</string>

    <string name="q_title">QUESTION</string>

    <string name="of_count">OF 5</string>

    <string name="g_won">CONGRATS! YOU WON THE GAME! YOU\'RE A TRIVIA MASTER!</string>

    <string name="play_again">Would you like to play again?</string>

    <string name="yes">Yes</string>

    <string name="menu">Menu</string>

    <string name="you_lost">Sorry! Game Over!</string>

    <string name="correct_ans">The correct answer was:</string>

    <string name="right">CORRECT!!!</string>

    <string name="next">NEXT</string>

    <string name="submit">Submit</string>

    <string name="need_ans">Please select an answer choice</string>

    <string name="make_sel">Please choose your wanted category:</string>

    <string name="geo">Geography</string>

    <string name="tv">Television</string>

    <string name="categories">Categories Mode</string>

    <string name="categories_mode_info">This is a game show where you get to pick from a series of categories and show your expertise!</string>

    <string name="NAME">name</string>

    <string name="TP">Trivial Pursuit</string>

    <string name="hobby">Hobbies</string>

    <string name="sport">Sports</string>
    <string name="bestcategory">Best Category:</string>>
    <string name="tpinfo">This is a game show where every question you pick a different category!</string>
    <string name="totalwins">Total Wins:</string>
    <string name="totalquestionscorrect">Total Questions Correct:</string>
    <string name="bestgamemode">Best Game Mode:</string>
    <string name="stats">Game Stats</string>
    <string name="trivpursuit">Trivial Pursuit</string>

</resources>