<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Game_Mode_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginTop="40dp"
        android:text="@string/gm_info"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="496dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="2dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/to_be_millionaire"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wwminfo"
            android:layout_width="match_parent"
            android:layout_height="233dp"
            android:text="@string/millionaire_info"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <Button
        android:id="@+id/gobackbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>