<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.StatsFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="551dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="2dp">

        <TextView
            android:id="@+id/bestcategorylabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/bestcategory"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bestcategorytext"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/bestgamemodelabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/bestgamemode"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bestgamemodetext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/totalquestionscorrectlabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/totalquestionscorrect"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalquestionscorrecttext"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/totalwinslabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/totalwins"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/totalwinstext"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"/>



        <Button
            android:id="@+id/gobackbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="-1dp" />
    </LinearLayout>



</FrameLayout>